Use GenomicBreaks::bridgeRegions and adjust vignettes accordingly.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -324,23 +324,7 @@ Mapped unaligned regions
 We can pair the unaligned regions that are between two colinearly aligned regions.
 
 ```{r mappedUnaligned, cache = TRUE, dependson="GBreaks_object"}
-filterMappedUnaligned <- function(gb) {
-  colinearRegions <- filterColinearRegions(flagColinearAlignments(gb), rename = FALSE)
-  # Turning the sequence of [(TRUE)n, FALSE]n into indices.
-  idx <- c(0, head(cumsum(!colinearRegions$colinear), -1))
-  gbl <- split(colinearRegions, idx)
-  unalMap <- endoapply(gbl, \(gb) {
-    # Check strand
-    onMinus <- all(strand(gb) == "-")
-    # Need to subtract 1 because some ranges are adjacent (no gap)
-    GBreaks(target = cleanGaps(gb      - 1),
-            query  = cleanGaps(gb$query -1) |> sort(decreasing = onMinus))
-  }) |> unlist()
-  names(unalMap) <- NULL
-  unalMap
-}
-
-unalMap <- BiocParallel::bplapply(gbs, filterMappedUnaligned) |> as("SimpleList")
+unalMap <- BiocParallel::bplapply(gbs, bridgeRegions) |> as("SimpleList")
 
 unalMap[Oik_Oik] <- BiocParallel::bplapply(unalMap[Oik_Oik], flagLongShort_, longShort)
 unalMap[Oik_Oik] <- annotateWithReps(unalMap[Oik_Oik], reps)
@@ -364,7 +348,7 @@ traGaps <- function(coa) {
   tra <- filterTranslocations(tra, remove = TRUE)
   # Finally, extract the newly "unaligned mapped" regions.
   # They contain the gaps left by the removal of the translocated regions.
-  filterMappedUnaligned(tra)
+  bridgeRegions(tra)
 }
 
 tra <- BiocParallel::bplapply(coa, traGaps) |> as("SimpleList")
