Also show the number of one-to-one pairs filtered out.

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -207,8 +207,9 @@ orthoPairs_one2oneInOiks_Filtered <- sapply(orthoPairs_one2oneInOiks, function(g
   gb
 }) |> SimpleList()
 
-sapply(orthoPairs, length) - sapply(orthoPairsFiltered, length)
-sapply(orthoPairs_core, length) - sapply(orthoPairsFiltered_core, length)
+sapply(orthoPairs, length)               - sapply(orthoPairsFiltered, length)
+sapply(orthoPairs_core, length)          - sapply(orthoPairsFiltered_core, length)
+sapply(orthoPairs_one2oneInOiks, length) - sapply(orthoPairs_one2oneInOiks_Filtered, length)
 ```
 
 
