Better summarise the number of orthogroup blocks.

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -255,12 +255,12 @@ orthoBlocks_core[ 1:15 ] <- sapply(orthoBlocks_core[ 1:15 ],  flagLongShort_, lo
 orthoBlocks_one2oneInOiks <- sapply(orthoPairs_one2oneInOiks_Filtered, coalOrtho) |> SimpleList()
 orthoBlocks_one2oneInOiks <- sapply(orthoBlocks_one2oneInOiks,  flagLongShort_, longShort) |> SimpleList()
 
-sapply(orthoPairs, length)
+sapply(orthoPairsFiltered, length)
 sapply(orthoBlocks, length)
+sapply(orthoPairsFiltered_core, length)
 sapply(orthoBlocks_core, length)
 sapply(orthoPairs_one2oneInOiks_Filtered, length)
 sapply(orthoBlocks_one2oneInOiks, length)
-sapply(orthoBlocks_one2oneInOiks, \(gb) sum(gb$geneNumber))
 ```
 
 
