Tweak doc and reduce verbosity.

--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -18,8 +18,8 @@ knitr::opts_knit$set(verbose = TRUE)
 
 # Introduction
 
-In this vignette I dot-plot pairs of genomes in parallel to illustrate
-differences in the extend of scrambling in Oikopleura compared to equivalent
+This vignette produces alignment line plots of pairs of genomes to illustrate
+differences in the extent of scrambling in _Oikopleura_ compared to equivalent
 pairs in other genera.
 
 The core functions used here are maintained in our _GenomicBreaks_ R package,
@@ -34,8 +34,8 @@ comparisons of homologous chromosomes in more than one species.
 
 ```{r load_packages_and_data}
 library('OikScrambling') |> suppressPackageStartupMessages()
-(genomes <- OikScrambling:::loadAllGenomes())
-(load("BreakPoints.Rdata"))
+genomes <- OikScrambling:::loadAllGenomes()
+load("BreakPoints.Rdata")
 ```
 
 # Oikopleura
